ベンダプレフィックスを手厚く

--- a/src/ws_chat.html
+++ b/src/ws_chat.html
@@ -1015,8 +1015,8 @@ function msgAdd(targetPanel, data) {
 				switch(data.effect) {
 					case 1:
 						str = '<div style="'+
-							'transform-origin:left top;-webkit-transform-origin:left top;'+
-							'transform:scale(0.5,0.5);-webkit-transform:scale(0.5,0.5);'+
+							'transform-origin:left top;-webkit-transform-origin:left top;-moz-transform-origin:left top;-ms-transform-origin:left top;-o-transform-origin:left top;'+
+							'transform:scale(0.5,0.5);-webkit-transform:scale(0.5,0.5);-moz-transform:scale(0.5,0.5);-ms-transform:scale(0.5,0.5);-o-transform:scale(0.5,0.5);'+
 							'">'+str+'</div>';
 						break;
 					case 2:
