・ポート番号が４４３の場合はhttpsを使用するよう変更（ssl/privatekey.pemとssl/certificate.pemが必要） ・ホスト名の取得処理をpingからnbtstatに変更（相変わらずWindows専用…） ・通知用メッセージ文字数に上限を設けた（通知領域を圧迫しないように）

--- a/src/ws_chat.html
+++ b/src/ws_chat.html
@@ -1043,14 +1043,15 @@ function showDesktopPopup(title, msg, showTime) {
 		window.webkitNotifications &&
 		window.webkitNotifications.checkPermission() == 0
 	) {
+		var notifyMsg = (msg.length > 36) ? (msg.substring(0,35)+'...') : (msg);
 		var notify = window.webkitNotifications.createNotification(
 			'./extjs/resources/images/default/window/icon-info.gif',
 			title,
-			msg
+			notifyMsg
 		);
 		notify.onclick = function() { 
-			alert(msg);
 			notify.cancel();
+			alert(notifyMsg);
 		}
 		if (showTime > 0) {
 			notify.ondisplay = function() {
